Agrego transacciones en base de datos y consulta por API GET
